[gd_scene load_steps=2 format=3 uid="uid://c8yvxqnvxqnvx"]

[ext_resource type="Script" path="res://Scripts/menu_bar.gd" id="1_menu"]

[node name="MenuBar" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
script = ExtResource("1_menu")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="FileMenu" type="MenuButton" parent="HBoxContainer"]
layout_mode = 2
text = "ðŸ“‚ Arquivo"

[node name="EditMenu" type="MenuButton" parent="HBoxContainer"]
layout_mode = 2
text = "[E] Editar"

[node name="ViewMenu" type="MenuButton" parent="HBoxContainer"]
layout_mode = 2
text = "[V] Visualizar"

[node name="ToolsMenu" type="MenuButton" parent="HBoxContainer"]
layout_mode = 2
text = "[T] Ferramentas"

[node name="HelpMenu" type="MenuButton" parent="HBoxContainer"]
layout_mode = 2
text = "[A] Ajuda" 